--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="svg/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Купить путевку или горящий тур за границу из Москвы</title>
-    <link rel="shortcut icon" href="/assets/img/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/logo.ico" type="image/x-icon" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script charset="utf-8" src="https://front.sletat.ru/modules/module6/latest/module.js" defer></script>
+    
     <script charset="utf-8" src="https://ui.sletat.ru/module-4.0/core.js"></script>
   </head>
 
-  <body id="body" class="min-h-screen mx-auto max-w-[1920px]">
+  <body id="body" class="min-h-screen mx-auto max-w-[1920px] overflow-x-hidden">
     <div class="bg-white p-4 shadow-md w-full top-0 z-10">
       <div class="flex flex-col sm:flex-row sm:flex-wrap mx-auto px-2 max-w-[1366px] justify-between">
         <div class="flex text-orange-500 text-2xl sm:w-1/2 md:w-3/12 items-center justify-between">
@@ -50,7 +50,6 @@
           </a> -->
         </div>
       </div>
-
     </div>
     <header id="TourSelection" class="bg-cover mx-auto h-[700px] md:h-[650px] w-full header relative">
       <div class="flex flex-col bg-blue-500 bg-opacity-25 top-0 right-0 bottom-0 left-0 absolute">
@@ -60,11 +59,6 @@
         <div class="mx-auto mt-auto bg-dark-500 bg-opacity-35 w-full max-w-[850px]">
           <div class="relative z-10" data-sletat-module-id="dbf179e7-b2e9-439d-b15b-6e6771dd2bbf"></div>
         </div>
-      </div>
-      <div class="custom-shape-divider-bottom-1631693646 hidden md:block">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
-        </svg>
       </div>
     </header>
     <section id="hotTours" class="py-10 w-full">
@@ -83,37 +77,60 @@
     <section class="subscribe md:h-[400px] mb-10 bg-cover">
       <div class="custom-shape-divider-top-1631693681 hidden md:block">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
         </svg>
       </div>
       <div class="px-4 py-14 flex flex-col h-full justify-center items-center relative z-10">
         <div class="text-center pb-6">
-          <h2 class="text-white font-bold text-3xl">ПОДПИСАТЬСЯ НА РАССЫЛКУ 
-            <span class="text-orange-500 font-bold text-3xl block">ГОРЯЩИХ ТУРОВ</span></h2>
+          <h2 class="text-white font-bold text-3xl">ПОДПИСАТЬСЯ НА РАССЫЛКУ <span class="text-orange-500 font-bold text-3xl block">ГОРЯЩИХ ТУРОВ</span></h2>
         </div>
-        <form action="mail.php" method="post" class="inline-flex flex-col md:flex-row w-full justify-center">
+        <form x-data @submit.prevent="$store.modal.sendForm('.form2', 'mail2.php')" action="mail2.php" method="post" class="form2 inline-flex flex-col md:flex-row w-full justify-center">
           <div class="pr-4 flex flex-wrap md:flex-row flex-col md:space-x-2 space-y-2 md:space-y-0">
-            <input class="px-4 md:w-[30%] min-w-[170px] py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-orange-500 focus:border-orange-500 shadow-md" type="text" name="name" placeholder="Введите имя">
-            <input class="px-4 md:w-[30%] min-w-[170px] py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-orange-500 focus:border-orange-500 shadow-md" type="tel" name="phone" placeholder="Введите телефон">
-            <input class="px-4 md:w-[30%] min-w-[170px] py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-orange-500 focus:border-orange-500 shadow-md" type="email" name="email" placeholder="Введите email">
+            <input
+              class="px-4 md:w-[30%] min-w-[170px] py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-orange-500 focus:border-orange-500 shadow-md"
+              type="text"
+              name="name"
+              placeholder="Введите имя"
+            />
+            <input
+              class="px-4 md:w-[30%] min-w-[170px] py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-orange-500 focus:border-orange-500 shadow-md"
+              type="tel"
+              name="phone"
+              placeholder="Введите телефон"
+            />
+            <input
+              class="px-4 md:w-[30%] min-w-[170px] py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-orange-500 focus:border-orange-500 shadow-md"
+              type="email"
+              name="email"
+              placeholder="Введите email"
+            />
             <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:pt-4">
-              <label class="inline-flex self-start justify-end items-center cursor-pointer hover:bg-green-400  shadow-md bg-green-500 text-white rounded-md px-4 py-2 mr-4" for="whatsapp">Whatsapp
-                <input class="ml-2 checked:bg-blue-500" type="checkbox" name="whatsapp" id="whatsapp">
+              <label class="inline-flex self-start justify-end items-center cursor-pointer hover:bg-green-400 shadow-md bg-green-500 text-white rounded-md px-4 py-2 mr-4" for="whatsapp"
+                >Whatsapp
+                <input class="ml-2 checked:bg-blue-500" type="checkbox" name="whatsapp" id="whatsapp" />
               </label>
-              <label class="inline-flex self-start justify-end items-center cursor-pointer hover:bg-blue-300 shadow-md bg-blue-400 text-white rounded-md px-4 py-2 mr-4" for="telegram">Telegram
-                <input class="ml-2 checked:bg-blue-500" type="checkbox" name="telegram" id="telegram">
+              <label class="inline-flex self-start justify-end items-center cursor-pointer hover:bg-blue-300 shadow-md bg-blue-400 text-white rounded-md px-4 py-2 mr-4" for="telegram"
+                >Telegram
+                <input class="ml-2 checked:bg-blue-500" type="checkbox" name="telegram" ch id="telegram" />
               </label>
-              <label class="inline-flex self-start justify-end items-center cursor-pointer hover:bg-orange-400 shadow-md bg-orange-500 text-white rounded-md px-4 py-2 mr-4" for="mail">Mail
-                <input class="ml-2 checked:bg-blue-500" type="checkbox" name="mail" id="mail">
+              <label class="inline-flex self-start justify-end items-center cursor-pointer hover:bg-orange-400 shadow-md bg-orange-500 text-white rounded-md px-4 py-2 mr-4" for="mail"
+                >Mail
+                <input class="ml-2 checked:bg-blue-500" type="checkbox" name="mail" id="mail" />
               </label>
             </div>
           </div>
-          <button class="px-6 mt-2 md:mt-0 self-start py-3 bg-orange-500 text-white rounded-md shadow-md hover:bg-orange-400">Подписаться</button>
+          <button type="submit" class="px-6 mt-2 md:mt-0 self-start py-3 bg-orange-500 text-white rounded-md shadow-md hover:bg-orange-400">Подписаться</button>
         </form>
       </div>
       <div class="custom-shape-divider-bottom-1631693646 hidden md:block">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
         </svg>
       </div>
     </section>
@@ -141,12 +158,10 @@
       <div class="mx-auto max-w-[1366px] px-4 py-10">
         <h2 class="pb-6 flex justify-center uppercase font-bold text-2xl">Популярные отели</h2>
         <div class="mt-6">
-          <script type="text/javascript">
-            sletat.HotelShowcase.$create({
-              showCountries: [3, 5, 14, 12, 15, 56, 119, 124, 169, 125, 129, 179, 28],
-              enabledCurrencies: ["RUB"],
-            });
-          </script>
+          <script type="text/javascript">sletat.HotelShowcase.$create({
+            jumpToAddress     : "https://www.tour-tour24.ru/#hotTours#module6",
+            enabledCurrencies : ["RUB"]
+          });</script>
           <span class="sletat-copyright">Идет загрузка модуля <a href="https://sletat.ru/" title="поиск туров" target="_blank">поиска туров</a> &hellip;</span>
         </div>
       </div>
@@ -185,7 +200,7 @@
               <h2 class="uppercase font-bold">Подобрать тур</h2>
               <span>И получить сертификат на 1000 рублей</span>
             </div>
-            <form action="mail5.php" method="post" class="p-4 flex flex-col w-full">
+            <form x-data @submit.prevent="$store.modal.sendForm('.form3', 'mail3.php')" action="mail3.php" method="post" class="form3 p-4 flex flex-col w-full">
               <input class="mb-2 rounded-md p-2 outline-none border hover:border-blue-500 focus:border-blue-500" type="text" name="name" placeholder="Ваше имя" id="name" required />
               <input class="mb-2 rounded-md p-2 outline-none border hover:border-blue-500 focus:border-blue-500" type="tel" name="phone" placeholder="Телефон" id="tel" required />
               <textarea
@@ -283,58 +298,121 @@
       </div>
     </footer>
 
-    <a href="#body" class="fixed bottom-4 right-4 z-50">
-      <img src="/assets/img/arrow.png" alt="Наверх">
+    <a href="#body" class="fixed bottom-4 right-4 z-20">
+      <img src="/assets/img/arrow.png" alt="Наверх" />
     </a>
 
-    <div x-data
-    x-show="$store.modal.modalCallback"           
-    x-transition:enter="transition ease-out duration-300"
-    x-transition:enter-start="opacity-0 transform scale-90"
-    x-transition:enter-end="opacity-100 transform scale-100"
-    x-transition:leave="transition ease-in duration-300"
-    x-transition:leave-start="opacity-100 transform scale-100"
-    x-transition:leave-end="opacity-0 transform scale-90"
-    class="p-2 fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center bg-black bg-opacity-75">
-    <div class="flex flex-col max-w-3xl max-h-full overflow-auto bg-orange-500 rounded-md p-2">
-      <div class="z-50">
-        <button x-data @click="$store.modal.closeModal()" class="float-right pt-2 pr-2 outline-none focus:outline-none">
-          <svg class="fill-current text-black hover:text-white hover:rotate-180 transition-all duration-500" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 18 18">
-            <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
-            </path>
-          </svg>
-        </button>
-      </div>
-      <div class="flex justify-center items-center mb-4">
-        <h2 class="text-2xl font-bold text-white">Зкаказать отратный звонок</h2>
-      </div>
-      <div class="p-2">
-        <form action="mail.php" method="post">
-          <input class="px-4 py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-blue-500 focus:border-blue-500 shadow-md" type="text" name="name" placeholder="Введите имя">
-          <input class="px-4 py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-blue-500 focus:border-blue-500 shadow-md" type="tel" name="phone" placeholder="Введите телефон">
-          <button class="px-6 self-start py-3 bg-green-500 text-white rounded-md shadow-md hover:bg-green-400">Отправть</button>
-        </form>
+    <div
+      x-data
+      x-show="$store.modal.modalCallback"
+      x-transition:enter="transition ease-out duration-300"
+      x-transition:enter-start="opacity-0 transform scale-90"
+      x-transition:enter-end="opacity-100 transform scale-100"
+      x-transition:leave="transition ease-in duration-300"
+      x-transition:leave-start="opacity-100 transform scale-100"
+      x-transition:leave-end="opacity-0 transform scale-90"
+      class="p-2 fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center bg-black bg-opacity-75"
+    >
+      <div class="flex flex-col max-w-3xl max-h-full overflow-auto bg-orange-500 rounded-md p-2">
+        <div class="z-50">
+          <button x-data @click="$store.modal.closeModal()" class="float-right pt-2 pr-2 outline-none focus:outline-none">
+            <svg class="fill-current text-black hover:text-white hover:rotate-180 transition-all duration-500" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 18 18">
+              <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+            </svg>
+          </button>
+        </div>
+        <div class="flex justify-center items-center mb-4">
+          <h2 class="text-2xl font-bold text-white">Зкаказать отратный звонок</h2>
+        </div>
+        <div class="p-2">
+          <form x-data @submit.prevent="$store.modal.sendForm('.form', 'mail.php')" action="mail.php" method="post" class="form">
+            <input
+              class="px-4 py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-blue-500 focus:border-blue-500 shadow-md"
+              type="text"
+              name="name"
+              placeholder="Введите имя"
+            />
+            <input
+              class="px-4 py-3 rounded-md outline-none focus:outline-none border border-transparent hover:border-blue-500 focus:border-blue-500 shadow-md"
+              type="tel"
+              name="phone"
+              placeholder="Введите телефон"
+              required
+            />
+            <div x-data="{planets: '', disabled: false }" class="flex flex-col">
+              <label class="py-2 text-white text-lg" for="chek">Введите название планеты на который вы живете!</label>
+              <div class="flex items-center">
+                <input
+                  x-model="planets"
+                  x-init="$watch('planets', value => value.toLocaleLowerCase() === 'земля' ? disabled = true : disabled = false)"
+                  id="chek"
+                  class="mb-2 w-1/4 rounded-md p-2 outline-none border hover:border-blue-500 focus:border-blue-500"
+                  type="text"
+                  placeholder="Марс"
+                />
+                <p
+                  x-show="planets.length != 0"
+                  class="text-white rounded-md h-[fit-content] px-2 ml-2"
+                  x-text="disabled ? 'верно' : 'не правильно'"
+                  x-bind:class="disabled ? 'bg-green-500' : 'bg-red-500'"
+                ></p>
+              </div>
+              <button
+                type="submit"
+                x-bind:disabled="!disabled"
+                x-bind:class="disabled ? '' : 'bg-gray-500 cursor-not-allowed'"
+                class="bg-green-500 rounded-md inline-flex w-[fit-content] py-3 px-5 text-white"
+              >
+                Отправить
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
- 
+
+    <div
+      id="msg"
+      class="fixed z-30 bottom-0 left-0 w-full h-[100px] transition-transform ease-in-out duration-500 transform translate-y-full bg-green-600 text-white flex justify-center items-center"
+    >
+      <h3 class="text-3xl">Ваше сообщение отправлено! Менеджер свяжется с вами в ближайшее время</h3>
+    </div>
 
     <script>
-      document.addEventListener('alpine:init', () => {
-          Alpine.store('modal', {
-            modalCallback: false,
+      document.addEventListener("alpine:init", () => {
+        Alpine.store("modal", {
+          modalCallback: false,
 
-            openModal() {
-              this.modalCallback = true
-            },
-            closeModal() {
-              this.modalCallback = false
-            }
-          })
-      })
-  </script>
-
+          openModal() {
+            this.modalCallback = true;
+          },
+          closeModal() {
+            this.modalCallback = false;
+          },
+          sendForm(data, mail) {
+            let form = $(data).serialize();
+            this.closeModal()
+            $.ajax({
+              type: "POST",
+              url: mail,
+              data: form,
+              success: function (data) {
+                $("#msg").addClass("active");
+                setTimeout(function () {
+                  $("#msg").removeClass("active");
+                }, 3500);
+              },
+              error: function (xhr, str) {
+                alert("Возникла ошибка: " + xhr.responseCode);
+              },
+            })
+          },
+        });
+      });
+    </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.iconify.design/2/2.0.4/iconify.min.js"></script>
+    <script charset="utf-8" defer src="https://front.sletat.ru/modules/module6/latest/module.js"></script>
   </body>
   <script type="module" src="./assets/js/main.js"></script>
 </html>
